--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -5,15 +5,31 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+    
+    - name: Make gradlew executable (if exists)
+      run: |
+        if [ -f "gradlew" ]; then
+          chmod +x gradlew
+        fi
+    
     - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      run: |
+        # Önce gradlew varsa onu kullan, yoksa gradle komutunu kullan
+        if [ -f "gradlew" ]; then
+          ./gradlew assembleDebug
+        else
+          gradle assembleDebug
+        fi
+    
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
