--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -5,31 +5,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
-    
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
-    
-    - name: Make gradlew executable (if exists)
-      run: |
-        if [ -f "gradlew" ]; then
-          chmod +x gradlew
-        fi
-    
     - name: Build with Gradle
       run: |
-        # Önce gradlew varsa onu kullan, yoksa gradle komutunu kullan
-        if [ -f "gradlew" ]; then
-          ./gradlew assembleDebug
-        else
-          gradle assembleDebug
-        fi
-    
+        chmod +x gradlew 2>/dev/null || true
+        ./gradlew wrapper --gradle-version 8.5
+        ./gradlew assembleDebug
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
