--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -5,16 +5,29 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
-    - name: Build with Gradle
+    
+    - name: Make gradlew executable
+      run: chmod +x gradlew
+    
+    - name: Build APK with Gradle
       run: |
-        chmod +x gradlew 2>/dev/null || true
-        ./gradlew wrapper --gradle-version 8.5
-        ./gradlew assembleDebug
+        echo "=== Starting Gradle Build ==="
+        ./gradlew wrapper --gradle-version 8.5 --distribution-type bin
+        ./gradlew assembleDebug --stacktrace
+        echo "=== Build Complete ==="
+    
+    - name: Check if APK exists
+      run: |
+        echo "Looking for APK files..."
+        find . -name "*.apk" -type f 2>/dev/null | head -20
+        ls -la app/build/outputs/apk/ 2>/dev/null || echo "APK directory not created yet"
+    
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
